Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20931

ALTER...IMPORT can crash the server

    XMLWordPrintable

Details

    Description

      When importing a tablespace, especially when just having the .ibd tablespace file but no .cfg file, the import may fail with messages like:

      2019-10-14 15:35:43 250 [Note] InnoDB: Phase I - Update all pages
      2019-10-14 15:35:44 250 [Note] InnoDB: Sync to disk
      2019-10-14 15:35:44 250 [Note] InnoDB: Sync to disk - done!
      2019-10-14 15:35:44 250 [Note] InnoDB: Phase II - Purge records from index `Index_name`
      2019-10-14 15:35:44 250 [ERROR] [FATAL] InnoDB: Trying to read page number 65200640 in space 574155, space name db/table, which is outside the tablespace bounds. Byte offset 0, len 16384
      191014 15:35:44 [ERROR] mysqld got signal 6 ;
      

      In such cases the import should simply be aborted, and the table left in DISCARD state.

      Crashing the table due to a failed import doesn't look like a good idea as it is clear that the detected corruption is local to the not yet successfully imported table only

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              2 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 18d 7h
                  18d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.