MDEV-20931 ALTER...IMPORT can crash the server

Main idea: don't log-and-crash but propogate error to the upper layers of stack
to handle it and show to a user.