storage/innobase/fil/fil0fil.cc
@@ -3216,16 +3216,16 @@ func_exit:
 /*============================ FILE I/O ================================*/
 
 /** Report information about an invalid page access. */
-ATTRIBUTE_COLD __attribute__((noreturn))
-static void
-fil_report_invalid_page_access(const char *name,
-                               os_offset_t offset, ulint len, bool is_read)
+ATTRIBUTE_COLD
+static std::string fil_invalid_page_access_msg(const char *name,
+                                               os_offset_t offset, ulint len,
+                                               bool is_read)
 {
-  ib::fatal() << "Trying to " << (is_read ? "read " : "write ") << len
-              << " bytes at " << offset
-              << " outside the bounds of the file: " << name;
+  std::stringstream ss;
+  ss << "Trying to " << (is_read ? "read " : "write ") << len << " bytes at "
+     << offset << " outside the bounds of the file: " << name;
+  return ss.str();
 }
-
 
 /** Update the data structures on write completion */
 inline void fil_node_t::complete_write()
@@ -3294,9 +3294,10 @@ fil_io_t fil_space_t::io(const IORequest &type, os_offset_t offset, size_t len,
 					release();
 					return {DB_ERROR, nullptr};
 				}
-				fil_report_invalid_page_access(name, offset,
-							       len,
-							       type.is_read());
+
+				ib::fatal() << fil_invalid_page_access_msg(
+						name, offset, len,
+						type.is_read());
 			}
 		}
 
@@ -3312,8 +3313,22 @@ fil_io_t fil_space_t::io(const IORequest &type, os_offset_t offset, size_t len,
 			return {DB_ERROR, nullptr};
 		}
 
-		fil_report_invalid_page_access(
-			node->name, offset, len, type.is_read());
+		auto msg = fil_invalid_page_access_msg(
+				name, offset, len, type.is_read());
+		if (auto *table = dict_table_open_on_name(
+				node->space->name, false, false,
+				DICT_ERR_IGNORE_NONE)) {
+			if (table->flags2 & DICT_TF2_DISCARDED) {
+				release();
+				dict_table_close(table, false, false);
+				ib::error() << msg;
+				return {DB_IO_ERROR, nullptr};
+			}
+
+			dict_table_close(table, false, false);
+		}
+
+		ib::fatal() << msg;
 	}
 
 	dberr_t err;
