storage/innobase/include/btr0btr.h
@@ -731,7 +731,7 @@ btr_validate_index(
 /*************************************************************//**
 Removes a page from the level list of pages. */
 UNIV_INTERN
-void
+dberr_t
 btr_level_list_remove_func(
 /*=======================*/
 	ulint			space,	/*!< in: space where removed */
